# discord-pm

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  entrypoint.sh  fly.toml  package.json  pyproject.toml
.claude/: settings.local.json
discord_pm/: __init__.py  __main__.py  bot.py  config.py
discord_pm/cogs/: standup.py
discord_pm/models/: __init__.py  standup.py
discord_pm/services/: __init__.py  recorder.py  store.py  summarizer.py  transcriber.py
scripts/: deploy.sh
src/: activity-client.ts  activity.ts  bot.ts  github.ts  index.ts  proposals.ts  recorder.ts  review.ts  store.ts  summarizer.ts  transcriber.ts  users.ts  web.ts
tests/: test_models.py  test_voice_e2e.ts
